--- a/note.html
+++ b/note.html
@@ -6,144 +6,34 @@
 <title>Note Editor</title>
 
 <style>
-body{
-  margin:0;
-  background:#f3f4f6;
-  font-family:system-ui,Arial;
-}
-.wrap{
-  max-width:720px;
-  margin:12px auto;
-  background:#fff;
-  border-radius:10px;
-  box-shadow:0 2px 10px rgba(0,0,0,.1);
-  overflow:hidden;
-}
-.header{
-  padding:12px;
-  border-bottom:1px solid #ddd;
-}
-.header input{
-  width:100%;
-  font-size:16px;
-  padding:10px 12px;
-  border:1px solid #ccc;
-  border-radius:8px;
-}
+body{margin:0;background:#f3f4f6;font-family:system-ui,Arial}
+.wrap{max-width:720px;margin:12px auto;background:#fff;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,.1);overflow:hidden}
+.header{padding:12px;border-bottom:1px solid #ddd}
+.header input{width:100%;font-size:16px;padding:10px 12px;border:1px solid #ccc;border-radius:8px}
 
-.tabs{
-  display:flex;
-  justify-content:flex-end;
-  border-bottom:1px solid #ddd;
-}
-.tab{
-  padding:8px 14px;
-  cursor:pointer;
-  font-weight:600;
-  background:#e5e7eb;
-  color:#555;
-}
-.tab.active{
-  background:#fff;
-  color:#dc2626;
-  border-bottom:2px solid #dc2626;
-}
+.tabs{display:flex;justify-content:flex-end;border-bottom:1px solid #ddd}
+.tab{padding:8px 14px;font-weight:600;background:#e5e7eb;color:#555;cursor:pointer}
+.tab.active{background:#fff;color:#dc2626;border-bottom:2px solid #dc2626}
 
-.toolbar{
-  display:flex;
-  gap:6px;
-  padding:8px;
-  border-bottom:1px solid #ddd;
-  overflow-x:auto;
-}
-.toolbar button{
-  background:none;
-  border:none;
-  padding:6px;
-  border-radius:6px;
-}
+.toolbar{display:flex;gap:6px;padding:8px;border-bottom:1px solid #ddd;overflow-x:auto}
+.toolbar button{background:none;border:none;padding:6px;border-radius:6px}
 .toolbar button:hover{background:#e5e7eb}
-.toolbar svg{
-  width:20px;
-  height:20px;
-  stroke:#111;
-}
+.toolbar svg{width:20px;height:20px;stroke:#111}
 
-.editor{
-  min-height:260px;
-  padding:12px;
-  outline:none;
-  border:2px solid #2563eb;
-  margin:10px;
-  border-radius:8px;
-}
-.editor img{
-  max-width:100%;
-  height:auto;
-  display:block;
-  margin:8px auto;
-  border-radius:6px;
-}
+.editor{min-height:260px;padding:12px;border:2px solid #2563eb;margin:10px;border-radius:8px;outline:none}
+.editor img{max-width:100%;height:auto;display:block;margin:8px auto;border-radius:6px}
 
-textarea{
-  display:none;
-  width:calc(100% - 20px);
-  height:260px;
-  margin:10px;
-  border-radius:8px;
-  padding:12px;
-}
+textarea{display:none;width:calc(100% - 20px);height:260px;margin:10px;padding:12px;border-radius:8px}
 
-.footer{
-  display:flex;
-  gap:10px;
-  padding:12px;
-  border-top:1px solid #ddd;
-}
-.footer select,.footer button{
-  flex:1;
-  padding:10px;
-  border-radius:8px;
-  border:1px solid #ccc;
-  font-weight:600;
-}
-button.publish{
-  background:#dc2626;
-  color:#fff;
-  border:none;
-}
+.footer{display:flex;gap:10px;padding:12px;border-top:1px solid #ddd}
+.footer select,.footer button{flex:1;padding:10px;border-radius:8px;border:1px solid #ccc;font-weight:600}
+button.publish{background:#dc2626;color:#fff;border:none}
 
-.section{
-  max-width:720px;
-  margin:16px auto;
-  padding:0 6px;
-}
-.card{
-  background:#fff;
-  padding:12px;
-  border-radius:10px;
-  margin-bottom:10px;
-  box-shadow:0 2px 8px rgba(0,0,0,.08);
-  display:flex;
-  justify-content:space-between;
-  gap:10px;
-  align-items:center;
-}
-.card span{
-  word-break:break-all;
-  font-size:13px;
-}
-.card button{
-  padding:6px 10px;
-  border-radius:6px;
-  border:1px solid #ccc;
-  background:#f9fafb;
-  font-weight:600;
-}
-.actions{
-  display:flex;
-  gap:6px;
-}
+.section{max-width:720px;margin:16px auto;padding:0 6px}
+.card{background:#fff;padding:12px;border-radius:10px;margin-bottom:10px;box-shadow:0 2px 8px rgba(0,0,0,.08);display:flex;justify-content:space-between;gap:10px;align-items:center}
+.card span{font-size:13px;word-break:break-all}
+.card button{padding:6px 10px;border-radius:6px;border:1px solid #ccc;background:#f9fafb;font-weight:600}
+.actions{display:flex;gap:6px}
 small{color:#666}
 </style>
 </head>
@@ -228,63 +118,66 @@ small{color:#666}
 <input type="file" id="imgPick" accept="image/*" hidden>
 
 <script>
+const editor = document.getElementById('editor');
+const html = document.getElementById('html');
+const links = document.getElementById('links');
+const historyBox = document.getElementById('history');
+const imgPick = document.getElementById('imgPick');
+
 let notes = JSON.parse(localStorage.getItem('notes') || '[]');
 let tempLink = null;
 
 function cmd(c){document.execCommand(c,false,null)}
 
-function pickImage(){
-  imgPick.click();
-}
+function pickImage(){imgPick.click()}
 imgPick.onchange=e=>{
   const f=e.target.files[0];
   if(!f) return;
   const r=new FileReader();
   r.onload=()=>document.execCommand('insertImage',false,r.result);
   r.readAsDataURL(f);
-}
+};
 
 function showHTML(){
-  html.value=editor.innerHTML;
+  html.value = editor.innerHTML;
   editor.style.display='none';
   html.style.display='block';
   setTab(1);
 }
 function showEditor(){
-  editor.innerHTML=html.value;
+  editor.innerHTML = html.value;
   html.style.display='none';
   editor.style.display='block';
   setTab(0);
 }
 function setTab(i){
-  document.querySelectorAll('.tab').forEach((t,n)=>{
-    t.classList.toggle('active',n===i);
-  });
+  document.querySelectorAll('.tab').forEach((t,n)=>t.classList.toggle('active',n===i));
 }
 
-function genID(){
-  return Math.random().toString(36).slice(2,7);
-}
+function genID(){return Math.random().toString(36).slice(2,7)}
 
 function publish(){
+  if(html.style.display==='block'){
+    editor.innerHTML = html.value;
+  }
+
   const id=genID();
-  const note={
+  notes.unshift({
     id,
     title:title.value||'Untitled',
     content:editor.innerHTML,
     time:new Date().toLocaleString(),
     visibility:visibility.value
-  };
-  notes.unshift(note);
+  });
   localStorage.setItem('notes',JSON.stringify(notes));
 
-  tempLink=`v/view.html?id=${id}`;
+  tempLink = `v/view.html?id=${id}`;
   render();
 }
 
 function render(){
   links.innerHTML='';
-  history.innerHTML='';
+  historyBox.innerHTML='';
 
   if(tempLink){
     links.innerHTML=`
@@ -295,7 +188,7 @@ function render(){
   }
 
   notes.forEach(n=>{
-    history.innerHTML+=`
+    historyBox.innerHTML+=`
       <div class="card">
         <div>
           <b>${n.title}</b><br>
@@ -310,11 +203,11 @@ function render(){
 }
 
 function loadEdit(id){
-  const n=notes.find(x=>x.id===id);
+  const n = notes.find(x=>x.id===id);
   if(!n) return;
-  title.value=n.title;
-  editor.innerHTML=n.content;
-  tempLink=null;
+  title.value = n.title;
+  editor.innerHTML = n.content;
+  tempLink = null;
   render();
 }
 
