--- a/v/view.html
+++ b/v/view.html
@@ -11,101 +11,23 @@ body{
   margin:0;
   background:#0b0d12;
   color:#e5e7eb;
-  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
+  font-family:system-ui,Arial;
 }
-.wrap{
-  max-width:760px;
-  margin:16px auto;
-  padding:14px;
-}
+.wrap{max-width:760px;margin:16px auto;padding:14px}
 .card{
   background:#111827;
   border-radius:10px;
   padding:16px;
-  box-shadow:0 10px 30px rgba(0,0,0,.35);
 }
-h1{
-  font-size:22px;
-  margin:0 0 6px;
-  word-break:break-word;
-}
-.meta{
-  display:flex;
-  gap:12px;
-  font-size:13px;
-  color:#9ca3af;
-  margin-bottom:14px;
-}
-.content{
-  line-height:1.6;
-  word-break:break-word;
-}
-
-/* 🔥 FIX CLICK */
-.content,
-.content *{
-  pointer-events:auto !important;
-}
-
-/* IMAGE */
-.content img{
-  max-width:100%;
-  height:auto;
-  border-radius:8px;
-  margin:10px 0;
-}
-
-/* SHARE */
-.share{
-  display:flex;
-  gap:10px;
-  margin-top:16px;
-  flex-wrap:wrap;
-}
-.share button{
-  flex:1;
-  min-width:90px;
-  padding:10px;
-  border:none;
-  border-radius:8px;
-  background:#1f2937;
-  color:#e5e7eb;
-  font-weight:600;
-  cursor:pointer;
-}
-.share button:hover{
-  background:#374151;
-}
-
-/* PASSWORD */
-.lock{
-  text-align:center;
-  padding:30px 10px;
-}
-.lock input{
-  width:100%;
-  padding:10px;
-  border-radius:8px;
-  border:none;
-  margin:10px 0;
-}
-.lock button{
-  padding:10px 16px;
-  border:none;
-  border-radius:8px;
-  background:#2563eb;
-  color:#fff;
-  font-weight:600;
-}
-
-/* FOOT */
-.footer{
-  margin-top:16px;
-  display:flex;
-  justify-content:space-between;
-  font-size:13px;
-  color:#9ca3af;
-}
+h1{margin:0 0 6px;font-size:22px}
+.meta{display:flex;gap:12px;font-size:13px;color:#9ca3af;margin-bottom:14px}
+.content,.content *{pointer-events:auto}
+.content img{max-width:100%;height:auto;border-radius:8px}
+.share{display:flex;gap:10px;margin-top:16px}
+.share button{flex:1;padding:10px;border:0;border-radius:8px;background:#1f2937;color:#fff}
+.lock{text-align:center;padding:30px}
+.lock input{width:100%;padding:10px;border-radius:8px;border:0;margin:10px 0}
+.lock button{padding:10px 16px;border:0;border-radius:8px;background:#2563eb;color:#fff}
 </style>
 </head>
 <body>
@@ -121,9 +43,9 @@ h1{
     <div id="content" class="content"></div>
 
     <div class="share">
-      <button onclick="shareWA()">WhatsApp</button>
-      <button onclick="shareTG()">Telegram</button>
-      <button onclick="copyLink()">Salin</button>
+      <button onclick="wa()">WhatsApp</button>
+      <button onclick="tg()">Telegram</button>
+      <button onclick="copy()">Salin</button>
     </div>
   </div>
 
@@ -134,12 +56,12 @@ h1{
   </div>
 </div>
 
-<!-- FIREBASE -->
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-import { getDatabase, ref, get, runTransaction, onDisconnect, set, onValue } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
+<!-- FIREBASE COMPAT -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
-const firebaseConfig = {
+<script>
+firebase.initializeApp({
   apiKey: "AIzaSyC4KJsPLfoEiZSKQUZHrGzZh6-Fv_0Q7P0",
   authDomain: "views-counter-610fa.firebaseapp.com",
   databaseURL: "https://views-counter-610fa-default-rtdb.asia-southeast1.firebasedatabase.app",
@@ -147,78 +69,50 @@ const firebaseConfig = {
   storageBucket: "views-counter-610fa.firebasestorage.app",
   messagingSenderId: "998762153750",
   appId: "1:998762153750:web:7113cd0bba422204fa7237"
-};
-
-const appFB = initializeApp(firebaseConfig);
-const db = getDatabase(appFB);
-
-const id = new URLSearchParams(location.search).get('id');
-const noteRef = ref(db, 'notes/'+id);
-
-let currentNote=null;
-
-get(noteRef).then(snap=>{
-  if(!snap.exists()){
-    document.body.innerHTML='<h2 style="text-align:center">Note tidak ditemukan</h2>';
-    return;
-  }
-  currentNote=snap.val();
-
-  if(currentNote.visibility==='private'){
-    lock.style.display='block';
-  }else{
-    showNote();
-  }
 });
 
-window.unlock=()=>{
-  if(pass.value===currentNote.password){
-    showNote();
-  }else{
-    alert('Password salah');
-  }
-};
+const db=firebase.database();
+const id=new URLSearchParams(location.search).get('id');
 
-function showNote(){
+db.ref('notes/'+id).once('value').then(s=>{
+  if(!s.exists()){document.body.innerHTML='NOT FOUND';return;}
+  const n=s.val();
+
+  if(n.visibility==='private'){
+    lock.style.display='block';
+    window.unlock=()=>{
+      if(pass.value===n.password) show(n);
+      else alert('Password salah');
+    }
+  }else show(n);
+});
+
+function show(n){
   lock.style.display='none';
   app.style.display='block';
-
-  title.textContent=currentNote.title;
-  time.textContent=currentNote.time;
-  content.innerHTML=currentNote.content;
-
-  initViews();
-  initOnline();
+  title.textContent=n.title;
+  time.textContent=n.time;
+  content.innerHTML=n.content;
+  viewsCount();
+  onlineCount();
 }
 
-/* VIEWS */
-function initViews(){
-  const vRef=ref(db,'views/'+id);
-  runTransaction(vRef,(n)=>(n||0)+1);
-  onValue(vRef,s=>views.textContent=s.val()||0);
+function viewsCount(){
+  const r=db.ref('views/'+id);
+  r.transaction(v=>(v||0)+1);
+  r.on('value',s=>views.textContent=s.val()||0);
 }
-
-/* ONLINE */
-function initOnline(){
-  const oRef=ref(db,'online/'+id+'/'+Math.random().toString(36).slice(2));
-  set(oRef,1);
-  onDisconnect(oRef).remove();
-  onValue(ref(db,'online/'+id),s=>{
+function onlineCount(){
+  const u=db.ref('online/'+id+'/'+Math.random().toString(36).slice(2));
+  u.set(1);u.onDisconnect().remove();
+  db.ref('online/'+id).on('value',s=>{
     online.textContent=s.exists()?Object.keys(s.val()).length:0;
   });
 }
 
-/* SHARE */
-window.copyLink=()=>{
-  navigator.clipboard.writeText(location.href);
-  alert('Link disalin');
-};
-window.shareWA=()=>{
-  open(`https://wa.me/?text=${encodeURIComponent(location.href)}`);
-};
-window.shareTG=()=>{
-  open(`https://t.me/share/url?url=${encodeURIComponent(location.href)}`);
-};
+function copy(){navigator.clipboard.writeText(location.href);alert('Disalin')}
+function wa(){open('https://wa.me/?text='+encodeURIComponent(location.href))}
+function tg(){open('https://t.me/share/url?url='+encodeURIComponent(location.href))}
 </script>
 
 </body>
