--- a/note.html
+++ b/note.html
@@ -5,46 +5,193 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Note Editor</title>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
 <style>
-*{box-sizing:border-box}
-body{margin:0;background:#f3f4f6;font-family:system-ui,Arial}
-.wrap{max-width:720px;margin:12px auto;background:#fff;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,.1);overflow:hidden}
-.header{padding:12px;border-bottom:1px solid #ddd}
+/* ===================================================
+   RESET & BASE
+=================================================== */
+*{
+  box-sizing:border-box;
+}
+body{
+  margin:0;
+  background:#f3f4f6;
+  font-family:system-ui, Arial, sans-serif;
+  color:#111;
+}
+
+/* ===================================================
+   LAYOUT
+=================================================== */
+.wrap{
+  max-width:720px;
+  margin:12px auto;
+  background:#fff;
+  border-radius:10px;
+  overflow:hidden;
+  box-shadow:0 2px 10px rgba(0,0,0,.1);
+}
+.section{
+  max-width:720px;
+  margin:16px auto;
+  padding:0 6px;
+}
+
+/* ===================================================
+   HEADER
+=================================================== */
+.header{
+  padding:12px;
+  border-bottom:1px solid #ddd;
+}
 .header input{
   width:100%;
-  max-width:100%;
-  font-size:16px;
   padding:10px 12px;
+  font-size:16px;
   border:1px solid #ccc;
   border-radius:8px;
+  outline:none;
 }
 
-.tabs{display:flex;justify-content:flex-end;border-bottom:1px solid #ddd}
-.tab{padding:8px 14px;font-weight:600;background:#e5e7eb;color:#555;cursor:pointer}
-.tab.active{background:#fff;color:#dc2626;border-bottom:2px solid #dc2626}
-
-.toolbar{display:flex;gap:6px;padding:8px;border-bottom:1px solid #ddd;overflow-x:auto}
-.toolbar button{background:none;border:none;padding:6px;border-radius:6px;cursor:pointer}
-.toolbar button:hover{background:#e5e7eb}
-
-.editor{min-height:260px;padding:12px;border:2px solid #2563eb;margin:10px;border-radius:8px;outline:none}
-.editor img{max-width:100%;display:block;margin:8px auto;border-radius:6px}
-
-textarea{display:none;width:calc(100% - 20px);height:260px;margin:10px;padding:12px;border-radius:8px}
-
-.footer{display:flex;flex-direction:column;gap:8px;padding:12px;border-top:1px solid #ddd}
-.footer select,.footer input,.footer button{
-  padding:10px;border-radius:8px;border:1px solid #ccc;font-weight:600;width:100%
+/* ===================================================
+   TABS
+=================================================== */
+.tabs{
+  display:flex;
+  justify-content:flex-end;
+  border-bottom:1px solid #ddd;
 }
-button.publish{background:#dc2626;color:#fff;border:none;cursor:pointer}
+.tab{
+  padding:8px 14px;
+  font-weight:600;
+  cursor:pointer;
+  background:#e5e7eb;
+  color:#555;
+}
+.tab.active{
+  background:#fff;
+  color:#dc2626;
+  border-bottom:2px solid #dc2626;
+}
 
-.section{max-width:720px;margin:16px auto;padding:0 6px}
-.card{background:#fff;padding:12px;border-radius:10px;margin-bottom:10px;box-shadow:0 2px 8px rgba(0,0,0,.08);display:flex;justify-content:space-between;gap:10px;align-items:center}
-.actions{display:flex;gap:6px}
-.danger{background:#fee2e2;border-color:#fecaca;color:#991b1b}
-small{color:#666}
+/* ===================================================
+   TOOLBAR
+=================================================== */
+.toolbar{
+  display:flex;
+  gap:6px;
+  padding:8px;
+  border-bottom:1px solid #ddd;
+  overflow-x:auto;
+}
+.toolbar button{
+  background:none;
+  border:none;
+  padding:6px;
+  border-radius:6px;
+  cursor:pointer;
+}
+.toolbar button:hover{
+  background:#e5e7eb;
+}
+.toolbar svg{
+  width:20px;
+  height:20px;
+  stroke:#111;
+}
+
+/* ===================================================
+   EDITOR
+=================================================== */
+.editor,
+textarea{
+  width:calc(100% - 20px);
+  min-height:260px;
+  margin:10px;
+  padding:12px;
+  border-radius:8px;
+  border:2px solid #2563eb;
+  outline:none;
+}
+.editor{
+  display:block;
+}
+.editor img{
+  max-width:100%;
+  height:auto;
+  display:block;
+  margin:8px auto;
+  border-radius:6px;
+}
+textarea{
+  display:none;
+  resize:vertical;
+}
+
+/* ===================================================
+   FOOTER / PUBLISH
+=================================================== */
+.footer{
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+  padding:12px;
+  border-top:1px solid #ddd;
+}
+.footer select,
+.footer input,
+.footer button{
+  width:100%;
+  padding:10px;
+  font-weight:600;
+  border-radius:8px;
+  border:1px solid #ccc;
+}
+.footer button.publish{
+  background:#dc2626;
+  color:#fff;
+  border:none;
+  cursor:pointer;
+}
+
+/* ===================================================
+   CARD / HISTORY / LINK
+=================================================== */
+.card{
+  background:#fff;
+  padding:12px;
+  border-radius:10px;
+  margin-bottom:10px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  gap:10px;
+  box-shadow:0 2px 8px rgba(0,0,0,.08);
+}
+.card span{
+  font-size:13px;
+  word-break:break-all;
+}
+.actions{
+  display:flex;
+  gap:6px;
+  flex-wrap:wrap;
+}
+.card button{
+  padding:6px 10px;
+  border-radius:6px;
+  border:1px solid #ccc;
+  background:#f9fafb;
+  font-weight:600;
+  cursor:pointer;
+}
+.card button.danger{
+  background:#fee2e2;
+  border-color:#fecaca;
+  color:#991b1b;
+}
+small{
+  color:#666;
+}
 </style>
 </head>
 
@@ -56,28 +203,59 @@ small{color:#666}
   </div>
 
   <div class="tabs">
-    <div class="tab active" id="tabEditor">EDITOR</div>
-    <div class="tab" id="tabHTML">HTML</div>
+    <div class="tab active" onclick="showEditor()">EDITOR</div>
+    <div class="tab" onclick="showHTML()">HTML</div>
   </div>
 
   <div class="toolbar">
-    <button data-cmd="bold">B</button>
-    <button data-cmd="justifyLeft">≡</button>
-    <button id="imgBtn">IMG</button>
-    <button data-cmd="insertUnorderedList">•</button>
-    <button data-cmd="undo">↶</button>
+    <button onclick="cmd('bold')">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <path d="M6 4h7a4 4 0 0 1 0 8H6z"/>
+        <path d="M6 12h8a4 4 0 0 1 0 8H6z"/>
+      </svg>
+    </button>
+    <button onclick="cmd('justifyLeft')">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <line x1="3" y1="6" x2="21" y2="6"/>
+        <line x1="3" y1="12" x2="15" y2="12"/>
+        <line x1="3" y1="18" x2="21" y2="18"/>
+      </svg>
+    </button>
+    <button onclick="pickImage()">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <rect x="3" y="3" width="18" height="18" rx="2"/>
+        <circle cx="8" cy="8" r="2"/>
+        <path d="M21 15l-5-5L5 21"/>
+      </svg>
+    </button>
+    <button onclick="cmd('insertUnorderedList')">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <line x1="8" y1="6" x2="21" y2="6"/>
+        <line x1="8" y1="12" x2="21" y2="12"/>
+        <line x1="8" y1="18" x2="21" y2="18"/>
+        <circle cx="4" cy="6" r="1"/>
+        <circle cx="4" cy="12" r="1"/>
+        <circle cx="4" cy="18" r="1"/>
+      </svg>
+    </button>
+    <button onclick="cmd('undo')">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <path d="M9 14l-4-4 4-4"/>
+        <path d="M20 20a8 8 0 0 0-8-8H5"/>
+      </svg>
+    </button>
   </div>
 
   <div id="editor" class="editor" contenteditable="true"></div>
   <textarea id="html"></textarea>
 
   <div class="footer">
-    <select id="visibility">
+    <select id="visibility" onchange="togglePassword()">
       <option value="public">Public</option>
       <option value="private">Private</option>
     </select>
     <input id="password" placeholder="Password (private)" style="display:none">
-    <button class="publish" id="publishBtn">Publish</button>
+    <button class="publish" onclick="publish()">Publish</button>
   </div>
 </div>
 
@@ -94,51 +272,66 @@ small{color:#666}
 <input type="file" id="imgPick" accept="image/*" hidden>
 
 <script>
-const supabase = window.supabase.createClient(
-  "https://reglvenhbvmyqujoydil.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJlZ2x2ZW5oYnZteXF1am95ZGlsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjcyMzc2MDQsImV4cCI6MjA4MjgxMzYwNH0.h-UEIR98TT8TynjraSQi7iwUrnCQ0nLuFJKaHPbOSUc"
-);
-
 const editor=document.getElementById('editor');
 const html=document.getElementById('html');
-const visibility=document.getElementById('visibility');
-const password=document.getElementById('password');
-const title=document.getElementById('title');
 const links=document.getElementById('links');
 const historyBox=document.getElementById('history');
 const imgPick=document.getElementById('imgPick');
+const title=document.getElementById('title');
+const visibility=document.getElementById('visibility');
+const password=document.getElementById('password');
 
-document.querySelectorAll('[data-cmd]').forEach(b=>{
-  b.onclick=()=>{editor.focus();document.execCommand(b.dataset.cmd)}
-});
+let notes=JSON.parse(localStorage.getItem('notes')||'[]');
+let tempLink=null;
 
-document.getElementById('imgBtn').onclick=()=>imgPick.click();
+function cmd(c){
+  editor.focus();
+  document.execCommand(c,false,null);
+}
+
+function pickImage(){
+  editor.focus();
+  imgPick.value='';
+  imgPick.click();
+}
+
 imgPick.onchange=e=>{
+  const f=e.target.files[0];
+  if(!f)return;
   const r=new FileReader();
   r.onload=()=>document.execCommand('insertImage',false,r.result);
-  r.readAsDataURL(e.target.files[0]);
+  r.readAsDataURL(f);
 };
 
-document.getElementById('tabHTML').onclick=()=>{
+function showHTML(){
   html.value=editor.innerHTML;
   editor.style.display='none';
   html.style.display='block';
-};
-
-document.getElementById('tabEditor').onclick=()=>{
+  setTab(1);
+}
+function showEditor(){
   editor.innerHTML=html.value;
   html.style.display='none';
   editor.style.display='block';
-};
+  setTab(0);
+}
+function setTab(i){
+  document.querySelectorAll('.tab').forEach((t,n)=>t.classList.toggle('active',n===i));
+}
 
-visibility.onchange=()=>password.style.display=
-  visibility.value==='private'?'block':'none';
+function togglePassword(){
+  password.style.display=visibility.value==='private'?'block':'none';
+  if(visibility.value!=='private')password.value='';
+}
 
-document.getElementById('publishBtn').onclick=async()=>{
-  if(html.style.display==='block') editor.innerHTML=html.value;
-  const id=Math.random().toString(36).slice(2,7);
+function genID(){
+  return Math.random().toString(36).slice(2,7);
+}
 
-  await supabase.from('notes').insert({
+function publish(){
+  if(html.style.display==='block')editor.innerHTML=html.value;
+  const id=genID();
+  notes.unshift({
     id,
     title:title.value||'Untitled',
     content:editor.innerHTML,
@@ -146,25 +339,59 @@ document.getElementById('publishBtn').onclick=async()=>{
     visibility:visibility.value,
     password:password.value||''
   });
+  localStorage.setItem('notes',JSON.stringify(notes));
+  tempLink=`https://narapoi.pages.dev/v/view.html?id=${id}`;
+  render();
+}
 
-  links.innerHTML=`<div class="card"><span>https://narapoi.pages.dev/v/view.html?id=${id}</span></div>`;
-  load();
-};
+function deleteNote(id){
+  if(!confirm('Yakin hapus note ini?'))return;
+  notes=notes.filter(n=>n.id!==id);
+  localStorage.setItem('notes',JSON.stringify(notes));
+  tempLink=null;
+  render();
+}
 
-async function load(){
+function loadEdit(id){
+  const n=notes.find(x=>x.id===id);
+  if(!n)return;
+  title.value=n.title;
+  editor.innerHTML=n.content;
+  visibility.value=n.visibility;
+  password.value=n.password||'';
+  togglePassword();
+  tempLink=null;
+  render();
+}
+
+function render(){
+  links.innerHTML='';
   historyBox.innerHTML='';
-  const {data}=await supabase.from('notes').select('*').order('time',{ascending:false});
-  data.forEach(n=>{
+  if(tempLink){
+    links.innerHTML=`
+      <div class="card">
+        <span>${tempLink}</span>
+        <button onclick="navigator.clipboard.writeText('${tempLink}')">Salin</button>
+      </div>`;
+  }
+  notes.forEach(n=>{
     historyBox.innerHTML+=`
       <div class="card">
-        <div><b>${n.title}</b><br><small>${n.time}</small></div>
+        <div>
+          <b>${n.title}</b><br>
+          <small>${n.time}</small>
+        </div>
         <div class="actions">
-          <button onclick="window.open('v/view.html?id=${n.id}')">Lihat</button>
+          <button onclick="window.open('https://narapoi.pages.dev/v/view.html?id=${n.id}')">Lihat</button>
+          <button onclick="loadEdit('${n.id}')">Edit</button>
+          <button class="danger" onclick="deleteNote('${n.id}')">Hapus</button>
         </div>
       </div>`;
   });
 }
-load();
+
+togglePassword();
+render();
 </script>
 
 </body>
