--- a/note.html
+++ b/note.html
@@ -5,193 +5,140 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Note Editor</title>
 
+<!-- SUPABASE -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 <style>
-/* ===================================================
-   RESET & BASE
-=================================================== */
-*{
-  box-sizing:border-box;
-}
-body{
-  margin:0;
-  background:#f3f4f6;
-  font-family:system-ui, Arial, sans-serif;
-  color:#111;
-}
+/* ===== BASE ===== */
+*{box-sizing:border-box}
+body{margin:0;background:#f3f4f6;font-family:system-ui,Arial}
+.wrap{max-width:720px;margin:12px auto;background:#fff;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,.1);overflow:hidden}
 
-/* ===================================================
-   LAYOUT
-=================================================== */
-.wrap{
-  max-width:720px;
-  margin:12px auto;
-  background:#fff;
-  border-radius:10px;
-  overflow:hidden;
-  box-shadow:0 2px 10px rgba(0,0,0,.1);
-}
-.section{
-  max-width:720px;
-  margin:16px auto;
-  padding:0 6px;
-}
-
-/* ===================================================
-   HEADER
-=================================================== */
-.header{
-  padding:12px;
-  border-bottom:1px solid #ddd;
-}
+/* ===== HEADER ===== */
+.header{padding:12px;border-bottom:1px solid #ddd}
 .header input{
   width:100%;
-  padding:10px 12px;
   font-size:16px;
+  padding:10px 12px;
   border:1px solid #ccc;
   border-radius:8px;
-  outline:none;
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
 }
 
-/* ===================================================
-   TABS
-=================================================== */
-.tabs{
-  display:flex;
-  justify-content:flex-end;
-  border-bottom:1px solid #ddd;
-}
+/* ===== TABS ===== */
+.tabs{display:flex;justify-content:flex-end;border-bottom:1px solid #ddd}
 .tab{
   padding:8px 14px;
   font-weight:600;
-  cursor:pointer;
   background:#e5e7eb;
   color:#555;
+  cursor:pointer;
+  user-select:none
 }
 .tab.active{
   background:#fff;
   color:#dc2626;
-  border-bottom:2px solid #dc2626;
+  border-bottom:2px solid #dc2626
 }
 
-/* ===================================================
-   TOOLBAR
-=================================================== */
+/* ===== TOOLBAR ===== */
 .toolbar{
   display:flex;
   gap:6px;
   padding:8px;
   border-bottom:1px solid #ddd;
-  overflow-x:auto;
+  overflow-x:auto
 }
 .toolbar button{
   background:none;
   border:none;
   padding:6px;
   border-radius:6px;
-  cursor:pointer;
+  cursor:pointer
 }
-.toolbar button:hover{
-  background:#e5e7eb;
-}
-.toolbar svg{
-  width:20px;
-  height:20px;
-  stroke:#111;
-}
+.toolbar button:hover{background:#e5e7eb}
+.toolbar svg{width:20px;height:20px;stroke:#111}
 
-/* ===================================================
-   EDITOR
-=================================================== */
-.editor,
-textarea{
-  width:calc(100% - 20px);
-  min-height:260px;
-  margin:10px;
-  padding:12px;
-  border-radius:8px;
-  border:2px solid #2563eb;
-  outline:none;
-}
+/* ===== EDITOR ===== */
 .editor{
-  display:block;
+  min-height:260px;
+  padding:12px;
+  border:2px solid #2563eb;
+  margin:10px;
+  border-radius:8px;
+  outline:none
 }
 .editor img{
   max-width:100%;
   height:auto;
   display:block;
   margin:8px auto;
-  border-radius:6px;
-}
-textarea{
-  display:none;
-  resize:vertical;
+  border-radius:6px
 }
 
-/* ===================================================
-   FOOTER / PUBLISH
-=================================================== */
+textarea{
+  display:none;
+  width:calc(100% - 20px);
+  height:260px;
+  margin:10px;
+  padding:12px;
+  border-radius:8px;
+  border:2px solid #2563eb;
+  outline:none;
+  font-family:monospace
+}
+
+/* ===== FOOTER ===== */
 .footer{
   display:flex;
   flex-direction:column;
   gap:8px;
   padding:12px;
-  border-top:1px solid #ddd;
+  border-top:1px solid #ddd
 }
 .footer select,
 .footer input,
 .footer button{
-  width:100%;
   padding:10px;
-  font-weight:600;
   border-radius:8px;
   border:1px solid #ccc;
+  font-weight:600;
+  width:100%
 }
-.footer button.publish{
+button.publish{
   background:#dc2626;
   color:#fff;
   border:none;
-  cursor:pointer;
+  cursor:pointer
 }
 
-/* ===================================================
-   CARD / HISTORY / LINK
-=================================================== */
+/* ===== SECTION ===== */
+.section{max-width:720px;margin:16px auto;padding:0 6px}
 .card{
   background:#fff;
   padding:12px;
   border-radius:10px;
   margin-bottom:10px;
+  box-shadow:0 2px 8px rgba(0,0,0,.08);
   display:flex;
   justify-content:space-between;
-  align-items:center;
   gap:10px;
-  box-shadow:0 2px 8px rgba(0,0,0,.08);
+  align-items:center
 }
-.card span{
-  font-size:13px;
-  word-break:break-all;
-}
-.actions{
-  display:flex;
-  gap:6px;
-  flex-wrap:wrap;
-}
+.card span{font-size:13px;word-break:break-all}
 .card button{
   padding:6px 10px;
   border-radius:6px;
   border:1px solid #ccc;
   background:#f9fafb;
   font-weight:600;
-  cursor:pointer;
+  cursor:pointer
 }
-.card button.danger{
-  background:#fee2e2;
-  border-color:#fecaca;
-  color:#991b1b;
-}
-small{
-  color:#666;
-}
+.actions{display:flex;gap:6px;flex-wrap:wrap}
+small{color:#666}
+.danger{background:#fee2e2;border-color:#fecaca;color:#991b1b}
 </style>
 </head>
 
@@ -203,59 +150,28 @@ small{
   </div>
 
   <div class="tabs">
-    <div class="tab active" onclick="showEditor()">EDITOR</div>
-    <div class="tab" onclick="showHTML()">HTML</div>
+    <div class="tab active" id="tabEditor">EDITOR</div>
+    <div class="tab" id="tabHTML">HTML</div>
   </div>
 
   <div class="toolbar">
-    <button onclick="cmd('bold')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <path d="M6 4h7a4 4 0 0 1 0 8H6z"/>
-        <path d="M6 12h8a4 4 0 0 1 0 8H6z"/>
-      </svg>
-    </button>
-    <button onclick="cmd('justifyLeft')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <line x1="3" y1="6" x2="21" y2="6"/>
-        <line x1="3" y1="12" x2="15" y2="12"/>
-        <line x1="3" y1="18" x2="21" y2="18"/>
-      </svg>
-    </button>
-    <button onclick="pickImage()">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <rect x="3" y="3" width="18" height="18" rx="2"/>
-        <circle cx="8" cy="8" r="2"/>
-        <path d="M21 15l-5-5L5 21"/>
-      </svg>
-    </button>
-    <button onclick="cmd('insertUnorderedList')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <line x1="8" y1="6" x2="21" y2="6"/>
-        <line x1="8" y1="12" x2="21" y2="12"/>
-        <line x1="8" y1="18" x2="21" y2="18"/>
-        <circle cx="4" cy="6" r="1"/>
-        <circle cx="4" cy="12" r="1"/>
-        <circle cx="4" cy="18" r="1"/>
-      </svg>
-    </button>
-    <button onclick="cmd('undo')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <path d="M9 14l-4-4 4-4"/>
-        <path d="M20 20a8 8 0 0 0-8-8H5"/>
-      </svg>
-    </button>
+    <button onclick="cmd('bold')">B</button>
+    <button onclick="cmd('justifyLeft')">L</button>
+    <button onclick="pickImage()">IMG</button>
+    <button onclick="cmd('insertUnorderedList')">•</button>
+    <button onclick="cmd('undo')">↺</button>
   </div>
 
   <div id="editor" class="editor" contenteditable="true"></div>
   <textarea id="html"></textarea>
 
   <div class="footer">
-    <select id="visibility" onchange="togglePassword()">
+    <select id="visibility">
       <option value="public">Public</option>
       <option value="private">Private</option>
     </select>
     <input id="password" placeholder="Password (private)" style="display:none">
-    <button class="publish" onclick="publish()">Publish</button>
+    <button class="publish" id="publishBtn">Publish</button>
   </div>
 </div>
 
@@ -272,127 +188,113 @@ small{
 <input type="file" id="imgPick" accept="image/*" hidden>
 
 <script>
-const editor=document.getElementById('editor');
-const html=document.getElementById('html');
-const links=document.getElementById('links');
-const historyBox=document.getElementById('history');
-const imgPick=document.getElementById('imgPick');
-const title=document.getElementById('title');
-const visibility=document.getElementById('visibility');
-const password=document.getElementById('password');
+/* ===== SUPABASE INIT ===== */
+const supabase = supabaseJs.createClient(
+  "https://reglvenhbvmyqujoydil.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJlZ2x2ZW5oYnZteXF1am95ZGlsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjcyMzc2MDQsImV4cCI6MjA4MjgxMzYwNH0.h-UEIR98TT8TynjraSQi7iwUrnCQ0nLuFJKaHPbOSUc"
+);
 
-let notes=JSON.parse(localStorage.getItem('notes')||'[]');
-let tempLink=null;
+/* ===== ELEMENTS ===== */
+const editor = document.getElementById('editor');
+const html = document.getElementById('html');
+const title = document.getElementById('title');
+const visibility = document.getElementById('visibility');
+const password = document.getElementById('password');
+const links = document.getElementById('links');
+const historyBox = document.getElementById('history');
+const imgPick = document.getElementById('imgPick');
 
+/* ===== TABS ===== */
+tabEditor.onclick = ()=>{
+  editor.innerHTML = html.value;
+  html.style.display='none';
+  editor.style.display='block';
+  tabEditor.classList.add('active');
+  tabHTML.classList.remove('active');
+};
+tabHTML.onclick = ()=>{
+  html.value = editor.innerHTML;
+  editor.style.display='none';
+  html.style.display='block';
+  tabHTML.classList.add('active');
+  tabEditor.classList.remove('active');
+};
+
+/* ===== TOOLS ===== */
 function cmd(c){
   editor.focus();
   document.execCommand(c,false,null);
 }
-
 function pickImage(){
-  editor.focus();
-  imgPick.value='';
   imgPick.click();
 }
-
 imgPick.onchange=e=>{
   const f=e.target.files[0];
-  if(!f)return;
+  if(!f) return;
   const r=new FileReader();
   r.onload=()=>document.execCommand('insertImage',false,r.result);
   r.readAsDataURL(f);
 };
 
-function showHTML(){
-  html.value=editor.innerHTML;
-  editor.style.display='none';
-  html.style.display='block';
-  setTab(1);
-}
-function showEditor(){
-  editor.innerHTML=html.value;
-  html.style.display='none';
-  editor.style.display='block';
-  setTab(0);
-}
-function setTab(i){
-  document.querySelectorAll('.tab').forEach((t,n)=>t.classList.toggle('active',n===i));
-}
+/* ===== PASSWORD ===== */
+visibility.onchange=()=>{
+  password.style.display = visibility.value==='private'?'block':'none';
+};
 
-function togglePassword(){
-  password.style.display=visibility.value==='private'?'block':'none';
-  if(visibility.value!=='private')password.value='';
-}
+/* ===== ID ===== */
+const genID=()=>Math.random().toString(36).slice(2,7);
 
-function genID(){
-  return Math.random().toString(36).slice(2,7);
-}
+/* ===== PUBLISH ===== */
+publishBtn.onclick = async ()=>{
+  const id = genID();
+  const content = html.style.display==='block'?html.value:editor.innerHTML;
 
-function publish(){
-  if(html.style.display==='block')editor.innerHTML=html.value;
-  const id=genID();
-  notes.unshift({
+  await supabase.from('notes').insert({
     id,
     title:title.value||'Untitled',
-    content:editor.innerHTML,
-    time:new Date().toLocaleString(),
+    content,
     visibility:visibility.value,
     password:password.value||''
   });
-  localStorage.setItem('notes',JSON.stringify(notes));
-  tempLink=`https://narapoi.pages.dev/v/view.html?id=${id}`;
-  render();
-}
 
-function deleteNote(id){
-  if(!confirm('Yakin hapus note ini?'))return;
-  notes=notes.filter(n=>n.id!==id);
-  localStorage.setItem('notes',JSON.stringify(notes));
-  tempLink=null;
-  render();
-}
+  links.innerHTML = `
+    <div class="card">
+      <span>https://narapoi.pages.dev/v/view.html?id=${id}</span>
+      <button onclick="navigator.clipboard.writeText('https://narapoi.pages.dev/v/view.html?id=${id}')">Salin</button>
+    </div>`;
+  loadHistory();
+};
 
-function loadEdit(id){
-  const n=notes.find(x=>x.id===id);
-  if(!n)return;
-  title.value=n.title;
-  editor.innerHTML=n.content;
-  visibility.value=n.visibility;
-  password.value=n.password||'';
-  togglePassword();
-  tempLink=null;
-  render();
-}
+/* ===== HISTORY ===== */
+async function loadHistory(){
+  const {data} = await supabase
+    .from('notes')
+    .select('*')
+    .order('created_at',{ascending:false});
 
-function render(){
-  links.innerHTML='';
   historyBox.innerHTML='';
-  if(tempLink){
-    links.innerHTML=`
-      <div class="card">
-        <span>${tempLink}</span>
-        <button onclick="navigator.clipboard.writeText('${tempLink}')">Salin</button>
-      </div>`;
-  }
-  notes.forEach(n=>{
+  data.forEach(n=>{
     historyBox.innerHTML+=`
       <div class="card">
         <div>
           <b>${n.title}</b><br>
-          <small>${n.time}</small>
+          <small>${new Date(n.created_at).toLocaleString()}</small>
         </div>
         <div class="actions">
           <button onclick="window.open('https://narapoi.pages.dev/v/view.html?id=${n.id}')">Lihat</button>
-          <button onclick="loadEdit('${n.id}')">Edit</button>
-          <button class="danger" onclick="deleteNote('${n.id}')">Hapus</button>
+          <button class="danger" onclick="del('${n.id}')">Hapus</button>
         </div>
       </div>`;
   });
 }
 
-togglePassword();
-render();
-</script>
+async function del(id){
+  if(!confirm('Hapus note ini?'))return;
+  await supabase.from('notes').delete().eq('id',id);
+  loadHistory();
+}
 
+loadHistory();
+</script>
 </body>
 </html>
